fix: overflow in index.html

--- a/styles/common.css
+++ b/styles/common.css
@@ -197,6 +197,10 @@ fieldset {
   text-transform: uppercase;
 }
 
+.subtitle--up {
+  margin-top: -25px;
+}
+
 .hidden {
   display: none;
 }
