--- a/styles/toys.css
+++ b/styles/toys.css
@@ -174,9 +174,9 @@ input[type="range"].styled-slider.slider-progress::-webkit-slider-runnable-track
 
 .product-list__item::before {
   position: absolute;
-  top: 35%;
+  top: 89px;
   left: 50%;
-  transform: translate(-50%, -35%);
+  transform: translateX(-50%);
   display: flex;
   justify-content: center;
   align-items: center;
